fixed header so it wraps but still need to make it horizontal

--- a/style.css
+++ b/style.css
@@ -20,31 +20,44 @@ html {
 
 /*--Navigation*/
 
+
 .navbar-brand {
     float: left;
     background-color: #59AAA5;
     color: white !important;
     font-size: 40px !important;
+    text-align: center !important;
     margin: 0 !important;
     padding: 20px !important;
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
+.navbar-collapse {
+    list-style: none !important;
+    text-align: center;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.navbar-collapse {
+    padding-right: 0px;
+}
+
 nav {
     border-bottom: 1px solid lightgrey;
     padding: 0!important;
-    padding-left: 40px !important;
 }
 
 .nav-item {
     font-size: 20px;
     border-right: 1px solid lightgrey;
+    list-style: none;
 }
 
 .nav-item:last-child {
     border-right: none;
-    padding-right: 20px;
 }
 
 /*--All Main Element Styles*/
